--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "source-map-cat",
   "version": "0.0.0",
-  "description": "",
+  "description": "WIP cat for JS source maps.",
   "main": "index.js",
   "bin": {
     "source-map-cat": "bin/source-map-cat.js"
